# obs-shaderfilter-plus

./: Cargo.toml  LICENSE  README.md  build.rs  install-debug.fish  install.fish
.github/: FUNDING.yml
examples/: VHS.hlsl  background_colors.glsl  background_tiles.glsl  blink.hlsl  blit.glsl  blit.hlsl  blur.glsl  chromatic_aberration.glsl  colorful_plasma.glsl  edge_detection.glsl  edge_detection_color.glsl  edge_detection_toon.glsl  fft.glsl  fft.hlsl  fft_delta.glsl  fft_delta.hlsl  fft_delta_err.hlsl  glitch_analog.hlsl  noise.glsl  pixelate.glsl  pulse.hlsl  radialBlur.glsl  rotatoe.hlsl  rounded_rect.glsl  scan_line.hlsl  shake.hlsl  visibility.hlsl  warping.glsl  wave.glsl
src/: default_shader.hlsl  effect.rs  effect_fallback.effect  effect_template.effect  lib.rs  preprocessor.rs  util.rs
src/effect/: effect_param.rs  loaded_value.rs  mod.rs
